Create a div around index.html content and style
I placed a div element around the heading and unordered list on the hompepage. Then, I added a black border and white background color to the div and adjusted the spacing of the div on the homepage.

--- a/style.css
+++ b/style.css
@@ -2,3 +2,14 @@ body {
     background-image: url(https://img.freepik.com/free-vector/red-white-gingham-pattern_1048-8291.jpg);
     background-color: red;
 }
+
+div {
+    background-color: #fdfcf7;
+    width: 50%;
+    height: auto;
+    padding: 0% 5% 3% 5%;
+    margin: 10% auto;
+    border: 2px solid black;
+    border-left: 75px solid black;
+    box-shadow: 10px 10px 25px rgb(0, 0, 0);
+}
