Style the list and hyperlinks in index.html
I added the recipe class and an id that correlates with the name of the recipe to each of the recipes included in the unordered list on the homepage. I styled each of the recipe names, which were items in the list, by increasing the font size; changing the font family; adjusting the spacing of each list item; adding a red background color, black border, an image of the recipe at the end of the list item's width on the right. I also styled the hyperlinks by changing the font color to black and removing the underline when the mouse is not hovering over a hyperlink. When the mouse is hovering over a hyperlink, the hyperlink's font color changes to white and a wavy underline appears under the text.

--- a/style.css
+++ b/style.css
@@ -21,3 +21,45 @@ h1 {
     text-decoration: underline;
     text-decoration-style: dashed;
 }
+
+li {
+    font-size: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding: 15px 70px 15px 15px;
+    margin: 10px;
+}
+
+.recipe {
+    background-size: 20%;
+    background-repeat: no-repeat;
+    background-position-x: 100%;
+    background-position-y: 50%;
+    background-color: red;
+}
+
+.recipe:hover {
+    border: 5px solid black;
+}
+
+#conch-fritters {
+    background-image: url(https://i.pinimg.com/originals/74/c8/43/74c8431b7d9e6010debe04cce6aa6c2b.jpg);
+}
+
+#lobster-alfredo {
+    background-image: url(https://realhousemoms.com/wp-content/uploads/Lobster-Alfredo-FB-LINK.jpg);
+}
+
+#shrimp-and-sausage-gumbo {
+    background-image: url(https://thealmondeater.com/wp-content/uploads/2022/04/sausage-and-shrimp-gumbo_web-8.jpg);
+}
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    color: white;
+    text-decoration: underline;
+    text-decoration-style: wavy;
+}
