Adjust CSS styling for mobile devices
If a device's screen size is less than 765 pixels in width, a few CSS rules will be adjusted to improve the homepage's user friendliness on devices with smaller screens. These adjustments include moving the thickest border to the top instead of the left of the div element; ensuring that the width is set to "fit-content"; reducing the margins, width of the hyperlinks in the list's width, and size of the images of the meals; and removing the box-shadow.

--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+@media (max-width: 765px) {
+    body>div {
+        border-left: 2px solid black;
+        border-top: 75px solid black;
+        width: fit-content;
+        margin: 5% auto;
+        box-shadow: none;
+    }
+
+    li.recipe {
+        background-size: 50%;
+    }
+
+    li>a {
+        width: 55%;
+        display: block;
+    }
+}
+
 body {
     background-image: url(https://img.freepik.com/free-vector/red-white-gingham-pattern_1048-8291.jpg);
     background-color: red;
