--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -2,3 +2,11 @@ body {
     background-color: #efbb7e;
     font-family: 'Arial Narrow Bold', sans-serif;
 }
+
+.card {
+    background-color: white;
+    margin: 50px 20%;
+    border: 2px solid black;
+    display: inline-block;
+    box-shadow: 10px 10px;
+}
