--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -10,3 +10,10 @@ body {
     display: inline-block;
     box-shadow: 10px 10px;
 }
+
+img {
+    width: 100%;
+    height: auto;
+    border: 1px solid black;
+    box-shadow: 5px 5px 20px rgb(198, 190, 190);
+}
