--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -17,3 +17,18 @@ img {
     border: 1px solid black;
     box-shadow: 5px 5px 20px rgb(198, 190, 190);
 }
+
+.left,
+.right {
+    width: 45%;
+}
+
+.left {
+    float: left;
+    padding-left: 20px;
+}
+
+.right {
+    float: right;
+    padding-right: 20px;
+}
