--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -11,6 +11,14 @@ body {
     box-shadow: 10px 10px;
 }
 
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+    text-align: center;
+    margin: 10px;
+}
+
 img {
     width: 100%;
     height: auto;
