Style the description, ingredients, and steps headings in conch-fritters.html
I added an id that correlates with the name of the heading to the ingredients and steps headings on the conch-fritters.html page. I styled each of these headings by increasing the font size, adjusting the spacing and font style of these headings, aligning the text of these headers, and adding an underline under these headers.

--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -26,6 +26,21 @@ img {
     box-shadow: 5px 5px 20px rgb(198, 190, 190);
 }
 
+h2 {
+    font-size: 30px;
+    padding: 5px;
+    margin-bottom: 2px;
+    font-style: oblique;
+    text-align: center;
+    text-decoration: underline;
+}
+
+#ingredients,
+#steps {
+    text-align: left;
+    margin: 1px;
+}
+
 .left,
 .right {
     width: 45%;
