Style the description, ingredients, and steps sections in the card in conch-fritters.html
I added the color class to the description, ingredients, and steps sections in the card in conch-fritters.html. I styled each of these sections by changing the background color to a light orange color, changing the font style of the paragraph and the bullet point style of the unordered list, and adjusting the spacing of each section. I also reduced the font size of the description, ingredients, and steps headings so that the contents of the page would fit on one page.

--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -27,7 +27,6 @@ img {
 }
 
 h2 {
-    font-size: 30px;
     padding: 5px;
     margin-bottom: 2px;
     font-style: oblique;
@@ -54,4 +53,30 @@ h2 {
 .right {
     float: right;
     padding-right: 20px;
+}
+
+.color {
+    background-color: rgb(250, 215, 156);
+}
+
+p,
+li {
+    padding: 2px;
+}
+
+p {
+    padding: 5px;
+    margin-top: 2px;
+    font-style: italic;
+}
+
+ul {
+    list-style-type: square;
+}
+
+ol,
+ul {
+    padding-bottom: 5px;
+    padding-right: 5px;
+    margin-top: 2px;
 }
