--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -1,3 +1,19 @@
+@media (max-width: 765px) {
+    body>.card {
+        padding: 0px 15px;
+        margin: 50px 15%;
+        width: 100%;
+        box-shadow: none;
+    }
+
+    .card .left,
+    .card .right {
+        width: 100%;
+        padding: 0px;
+    }
+
+}
+
 body {
     background-color: #efbb7e;
     font-family: 'Arial Narrow Bold', sans-serif;
