--- a/recipes/conch-fritters.css
+++ b/recipes/conch-fritters.css
@@ -42,6 +42,11 @@ img {
     box-shadow: 5px 5px 20px rgb(198, 190, 190);
 }
 
+.attribution {
+    text-align: center;
+    font-style: normal;
+}
+
 h2 {
     padding: 5px;
     margin-bottom: 2px;
