--- a/recipes/shrimp-and-sausage-gumbo.css
+++ b/recipes/shrimp-and-sausage-gumbo.css
@@ -42,6 +42,10 @@ img {
     box-shadow: 5px 5px 20px rgb(198, 190, 190);
 }
 
+.attribution {
+    text-align: center;
+}
+
 h2 {
     padding: 5px;
     margin-bottom: 2px;
